create section about. add animation to icons

--- a/src/sass/blocks/_menu.scss
+++ b/src/sass/blocks/_menu.scss
@@ -90,6 +90,14 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        a {
+            &:hover {
+                svg path {
+                    fill: #fff;
+                    transition: all .6s;
+                }
+            }
+        }
     }
     &__overlay {
         position: fixed;
