--- a/src/sass/blocks/_sidepanel.scss
+++ b/src/sass/blocks/_sidepanel.scss
@@ -22,4 +22,12 @@
             width: 150px;
         }
     }
+    a {
+        &:hover {
+            svg path {
+                fill: $main-color;
+                transition: all .6s;
+            }
+        }
+    }
 }
