--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -27,5 +27,8 @@
             color:#000;
             text-decoration: none;
         }
+        &-about:hover {
+            text-decoration: underline;
+        }
     }
 }
