--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -17,7 +17,7 @@
     &__descr {
         padding-top: 6px;
         .divider {
-            margin-top: 0px;
+            margin: 0;
         }
     }
     &__title {
