--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -27,6 +27,18 @@
             column-gap: 80px;
         }
     }
+    .skills {
+        &__wrapper {
+            grid-template-columns: repeat(auto-fit, 270px);
+            justify-content: space-between;
+        }
+        &__rating {
+            grid-template-columns: repeat(auto-fit, 350px);
+            grid-auto-rows: minmax(70px, auto);
+            justify-content: space-between;
+            padding: 0 30px;
+        }
+    }
 }
 @media(max-width: 992px) {
     .container {
@@ -39,6 +51,9 @@
             margin-top: 26px;
             margin-bottom: 15px;
         }
+    }
+    .divider {
+        margin: 0 auto;
     }
     .about {
         &__wrapper {
@@ -57,6 +72,20 @@
         &__wrapper {
             grid-template-columns: repeat(2, 320px);
             column-gap: 60px;
+        }
+    }
+    .skills {
+        &__wrapper {
+            padding: 0 30px;
+        }
+        &__rating {
+            grid-template-columns: repeat(auto-fit, 320px);
+            justify-content: space-between;
+            padding: 0;
+            column-gap: 0;
+            &-line {
+                width: 100%;
+            }
         }
     }
 }
@@ -98,6 +127,23 @@
             grid-template-columns: 1fr;
             column-gap: 60px;
             row-gap: 40px;
+        }
+    }
+    .skills {
+        padding-top: 40px;
+        &__wrapper {
+            padding: 0;
+            justify-content: center;
+            gap: 20px;
+        }
+        &__rating {
+            grid-template-columns: repeat(auto-fit, 320px);
+            grid-auto-rows: minmax(70px, auto);
+            justify-content: center;
+            margin-top: 40px;
+            &-line {
+                width: 100%;
+            }
         }
     }
 }
@@ -142,6 +188,14 @@
     .resume {
         &__wrapper {
             padding: 40px 5px 0 5px;
+        }
+    }
+    .skills {
+        &__wrapper {
+            margin-top: 20px;
+        }
+        &__rating {
+            grid-template-columns: repeat(auto-fit,300px);
         }
     }
 }
