--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -60,6 +60,9 @@
             grid-template: 45px 190px 45px / repeat(2, 250px);
         }
     }
+    .pageup {
+        display: none !important;
+    }
 }
 @media(max-width: 992px) {
     .container {
